--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack --config webpack.config.prod.js",
-    "start:dev": "webpack-dev-server --mode development --open"
+    "build": "webpack"
   },
   "devDependencies": {
+    "extract-loader": "^5.1.0",
     "lit": "^2.0.0",
+    "lit-css-loader": "^2.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
-  },
-  "dependencies": {
-    "@brightspace-ui/core": "^2.35.0"
   }
 }
